# rsomics-pcoa

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: bench.rs
src/: cli.rs  fmt.rs  lib.rs
tests/: compat.rs  oracle_skbio.py
tests/golden/: braycurtis_dm.tsv  braycurtis_pcoa.skbio.tsv  euclidean_dm.tsv  euclidean_pcoa.skbio.tsv
