[package]
name = "rsomics-pcoa"
version = "0.1.0"
description = "Principal Coordinates Analysis (PCoA) of a symmetric distance matrix — scikit-bio skbio.stats.ordination.pcoa equivalent (Gower double-centering + symmetric eigendecomposition)"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-pcoa"
authors = ["Zane Leong <efd@live.com>"]

[[bin]]
name = "rsomics-pcoa"
path = "src/main.rs"

[lib]
name = "rsomics_pcoa"
path = "src/lib.rs"
doctest = false

[dependencies]
rsomics-common = { version = "0.6", features = ["rayon"] }
rsomics-help = { version = "0.3" }
clap = { version = "4", features = ["derive"] }
faer = { version = "0.24", default-features = false, features = ["std", "linalg", "rayon"] }

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "bench"
harness = false
